# ylip-poc

./: .gitignore  CLAUDE.md  docker-compose.yaml  docker-compose.yml
backend/: docker-compose.yaml
backend/code_exec/: Dockerfile  main.py  pyproject.toml
backend/image/: Dockerfile  main.py  pyproject.toml
backend/music/: Dockerfile  main.py  pyproject.toml
backend/stt/: .dockerignore  Dockerfile  main.py  pyproject.toml
backend/tts/: Dockerfile  main.py  pyproject.toml  requirements.txt
docs/: subject-matter-design.md
e2e/: pyproject.toml  test_conversation_mode_image.md  test_conversation_mode_image.py  test_mcp_pushup.py  test_plot_directive.md  test_plot_directive.py  test_stop_button.md  test_stop_button.py  test_vision_image_upload.md  test_vision_image_upload.py
frontend/: .env.example  Dockerfile  pyproject.toml
frontend/src/: config.py  main.py
frontend/src/adapters/: base.py  code_exec.py  image_gen.py  llm.py  mcp_client.py  music_gen.py  stt.py  student_state.py  tts.py  vision.py
frontend/src/core/: orchestrator.py  pipeline.py  session.py
frontend/src/ui/: app.py
mcp-subject-matter/: Dockerfile  pyproject.toml  retrieval.py  server.py
mcp-subject-matter/scripts/: create_chemistry_db.py  create_math_db.py  create_pe_db.py
student-history/: Dockerfile  pyproject.toml  server.py
