[project]
name = "frontend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "gradio>=4.0",
    "httpx>=0.27",
    "openai>=1.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "mcp>=1.0",
]

[project.optional-dependencies]
tts = [
    "torch>=2.0",
    "transformers>=4.40",
    "soundfile>=0.12",
    "numpy>=1.24",
]
stt = [
    "faster-whisper>=1.0",
]
image = [
    "torch>=2.0",
    "diffusers>=0.28",
    "accelerate>=0.30",
    "pillow>=10.0",
    "transformers>=4.40",
]
vision = [
    "torch>=2.0",
    "transformers>=4.40",
    "pillow>=10.0",
]
all = [
    "frontend[tts]",
    "frontend[stt]",
    "frontend[image]",
    "frontend[vision]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["adapters", "core", "ui"]
include = ["config.py"]

[dependency-groups]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
