[project]
name = "ylip-student-history"
version = "0.1.0"
requires-python = ">=3.12"
description = "Student state tracking service for YLIP — records interactions, tracks mastery, exposes context for the tutor LLM."
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pytest>=8", "httpx>=0.27"]
