[project]
name = "student-history"
version = "0.1.0"
requires-python = ">=3.12"
description = "Student state tracking service for YLIP — records interactions, tracks mastery, exposes context for the tutor LLM."
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.27",
]
