[project]
name = "ylip-tts-backend"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "kokoro>=0.9",
    "soundfile>=0.12",
    "numpy>=1.24",
    "fastapi>=0.100",
    "uvicorn>=0.24",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
]

[tool.uv]
package = false
